<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_10"
  >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            style="@style/TextBlueStyle"
            android:text="@string/destroy_password" />

        <TextView
            android:id="@+id/destroy_power"
            style="@style/TextBlueStyle"
            android:layout_marginLeft="@dimen/margin_10"
            android:layout_marginStart="@dimen/margin_10"
          />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            style="@style/TextBlueStyle"
            android:text="@string/access_password" />

        <TextView
            android:id="@+id/access_password"
            style="@style/TextRedStyle"
            android:layout_marginLeft="@dimen/margin_10" 
            android:layout_marginStart="@dimen/margin_10" 
          />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            style="@style/TextBlueStyle"
            android:text="@string/input_tv" />

        <EditText
            android:id="@+id/input_password"
            style="@style/EditStyle"
            android:inputType="textPassword"
            android:text="@string/input_password" />
    </LinearLayout>

    <Button
        android:id="@+id/read_password"
        style="@style/ButtonStyle"
        android:text="@string/read_password" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            style="@style/TextBlueStyle"
            android:text="@string/password_mode" />

        <Spinner
            android:id="@+id/password_mode"
            style="@style/SpinnerDefaultStyle"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:entries="@array/password_mode" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            style="@style/TextBlueStyle"
            android:text="@string/new_password" />

        <EditText
            android:id="@+id/new_password"
            style="@style/EditStyle"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/change_password"
        style="@style/ButtonStyle"
        android:text="@string/change_password" />

    

</LinearLayout>